--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-MONGO_URI=mongodb+srv://mirikajain20_db_user:76yGeSd2EVsDEj1K@cluster0.rjijpzl.mongodb.net/
+
+MONGO_URI = mongodb://localhost:27017/samadhan
 PORT=5000
 JWT_SECRET=samadhanSecretKey
