--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 
-MONGO_URI = mongodb://localhost:27017/samadhan
+MONGO_URI = mongodb+srv://mirikajain20_db_user:mirika20@cluster0.nmmdrmq.mongodb.net/
 PORT=5000
 JWT_SECRET=samadhanSecretKey
+BASE_URL = http://localhost:5000
